--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "bootstrap": "^4.3.1",
     "chart.js": "^2.7.3",
     "classnames": "^2.2.6",
+    "grommet": "^2.6.5",
     "node-sass": "^4.11.0",
+    "polished": "^3.2.0",
     "react": "^16.8.1",
     "react-chartjs-2": "2.6.4",
     "react-color": "^2.17.0",
@@ -19,7 +21,8 @@
     "react-fontawesome": "1.6.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
-    "reactstrap": "6.4.0"
+    "reactstrap": "6.4.0",
+    "styled-components": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
