--- a/package.json
+++ b/package.json
@@ -7,7 +7,14 @@
   "copyright": "Copyright 2019 Nice Dash",
   "private": true,
   "dependencies": {
+    "@editorjs/checklist": "^1.1.0",
     "@editorjs/editorjs": "^2.12.4",
+    "@editorjs/embed": "^2.2.0",
+    "@editorjs/header": "^2.2.3",
+    "@editorjs/image": "^2.2.0",
+    "@editorjs/list": "^1.3.4",
+    "@editorjs/marker": "^1.2.0",
+    "@editorjs/paragraph": "^2.5.0",
     "aws-amplify": "^1.1.24",
     "aws-amplify-react": "^2.3.4",
     "bootstrap": "^4.3.1",
